# guess-that-lang

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile
.github/workflows/: release.yml
assets/dumps/: syntaxes.dump  themes.dump
src/: game.rs  github.rs  main.rs  path.rs  terminal.rs
src/providers/: gists.rs  mod.rs  repos.rs
