[package]
name = "guess-that-lang"
version = "1.0.6"
authors = ["Lioness100 <jchickmm2@gmail.com>"]
edition = "2021"
description = "CLI game to see how fast you can guess the language of a code block!"
repository = "https://github.com/Lioness100/guess-that-lang"
license = "Apache-2.0"
keywords = ["cli", "game", "cli-game", "fun"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_colours = "1.1.1"
ansi_term = "0.12.1"
anyhow = "1.0.59"
argh = "0.1.8"
confy = "0.4.0"
crossbeam-utils = "0.8.11"
crossterm = "0.24.0"
# Lioness100/guess-that-lang#5
# dark-light = "0.2.2"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
syntect = "5.0.0"
ureq = { version = "2.5.0", features = ["json"] }
