[package]
name = "guess-that-lang"
version = "1.0.20"
rust-version = "1.63"
authors = ["Lioness100 <jchickmm2@gmail.com>"]
edition = "2021"
description = "CLI game to see how fast you can guess the language of a code block!"
repository = "https://github.com/Lioness100/guess-that-lang"
license = "Apache-2.0"
keywords = ["cli", "game", "cli-game", "fun"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_colours = "1.1.1"
ansi_term = "0.12.1"
argh = "0.1.8"
confy = "0.4.0"
crossterm = "0.25.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
syntect = { version = "5.0.0", default_features = false, features = ["parsing", "regex-onig"] }
ureq = { version = "2.5.0", features = ["json"] }

[dev-dependencies]
indoc = "1.0.7"
